# SharvaYoutubePro

./: .gitignore  CLAUDE.md  README.md  YOUTUBE_API_AUDIT_CHEATSHEET.md  amd_gpu_grabber.py  colab_notebook.py  colab_notebook_tpu.py  colab_runner.py  daily_generate.py  daily_upload.py  hourly_upload.py  mi300x_generator.py  prewarm_tts.py  question_generator.sh  run_colab.sh  setup_colab.sh  spot_difference_colab.ipynb  spot_difference_upload.py  start.sh  stop.sh
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/migrations/: 001_initial.sql
app/src-tauri/src/: db.rs  lib.rs  questions.rs  videos.rs  youtube.rs
app/src/components/: Layout.tsx
app/src/pages/: Home.tsx  Settings.tsx  Videos.tsx
question_generator/: bulk_import.py  generator.py  mass_generator.py  mistral_generator.py  mistral_generator_2.py  mistral_riddles.py.DISABLED  parallel_mistral.py  run_all_imports.sh
video_generator/: .gitignore  CLAUDE.md  ai_image_generator.py  ai_json_generator.py  automation.py  combine_videos.sh  difference_maker.py  gui.py  image_fetcher.py  json_generator.py  main.py  requirements.txt  run.sh  run_ai_generator.sh  run_gui.sh  run_json_generator.sh  sd_integration.py  sound_effects.py
video_generator/data/: __init__.py  emoji_bank.py  question_bank.py
video_generator/generators/: __init__.py  base.py  emoji_word.py  general_knowledge.py  odd_one_out.py  shorts.py  spot_difference.py
