[package]
name = "sharva-youtube-pro"
version = "0.1.0"
description = "Quiz video generator and YouTube uploader"
authors = ["Sharva"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-opener = "2"
open = "5"
chrono = "0.4"
